# auto-ml-flow

./: Makefile  README.md  keras_example.py  pyproject.toml  test.py  xgb_exception_example.py  xgb_train_example.py
auto_ml_flow/: __init__.py  experiments.py  run_metrics.py  runs.py
auto_ml_flow/client/: base.py  exceptions.py
auto_ml_flow/client/v1/: __init__.py  consts.py
auto_ml_flow/client/v1/api/: datasets.py  experiments.py  param_metrics.py  predict.py  result_metrics.py  run_metrics.py  runs.py  systems.py
auto_ml_flow/client/v1/api/metrics/: __init__.py  cpu.py  disk.py  memory.py  network.py
auto_ml_flow/client/v1/models/: datasets.py  experiments.py  metrics.py  predict.py  run_metrics.py  runs.py  systems.py
auto_ml_flow/handlers/: dataset.py  experiment.py  run.py  run_metric.py  system.py
auto_ml_flow/metrics/: cpu.py  system.py
auto_ml_flow/metrics/monitor/: __init__.py  base.py  cpu.py  disk.py  memory.py  network.py
